# lumen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  lumen.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
frameworks/: article.yaml  book.yaml  default.yaml  podcast.yaml  reference.yaml  technical.yaml
lumen/: __init__.py  cli.py  exceptions.py
lumen/backends/: base.py  claude_api.py  claude_code.py  deepseek.py  openai_compat.py
lumen/core/: analyzer.py  chunker.py  classifier.py  config.py  logger.py  parser.py  pipeline.py  state.py
lumen/parsers/: __init__.py  base.py  epub.py  md.py  pdf.py
lumen/renderers/: __init__.py  html.py  mindmap.py  obsidian.py
tests/: test_analyzer_core.py  test_backend_claude.py  test_backend_deepseek.py  test_backend_openai.py  test_chunker.py  test_classifier.py  test_config.py  test_e2e_pipeline.py  test_exceptions.py  test_parsers.py  test_renderers.py  test_state.py
