[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen"
version = "0.1.0"
description = "Book deconstruction engine — PDF/EPUB/MD to structured notes + mind maps"
requires-python = ">=3.11"
dependencies = [
    "pyyaml~=6.0",
    "requests~=2.31",
    "pymupdf~=1.24",
    "ebooklib~=0.18",
    "beautifulsoup4~=4.12",
    "lxml~=5.0",
]

[project.scripts]
lumen = "lumen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["lumen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]
